# hush-ogis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/ai-service/: pyproject.toml
apps/ai-service/app/: auth.py  badge.py  badge_svg.py  digest.py  errors.py  main.py  models.py  rate_limit.py  routes_analytics.py  routes_badge.py  routes_digest.py  settings.py  supabase_client.py
apps/ai-service/hush_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ai-service/tests/: test_analytics_endpoint.py  test_auth.py  test_badge.py  test_badge_endpoint.py  test_badge_svg.py  test_digest.py  test_digest_endpoint.py  test_errors.py  test_rate_limit.py  test_settings.py  test_supabase_client.py
apps/dashboard/: middleware.ts  package.json  tailwind.config.ts  vitest.config.ts
apps/mobile/: .env.example  .gitignore  App.tsx  app.config.js  app.json  metro.config.js  package.json  tsconfig.json  vitest.config.ts
documents/: Hush-Design-Brief.md  Hush-Implementation-Plan.md  Hush-PRD-Summary.md  Hush-PRD.md  Hush-Phase-1-Continuous-Points-Change.md
documents/demo/: phase-10-demo-script.md
documents/design-specifications-summary/: README.md
documents/security/: phase-10-sr-sweep.md
scripts/: audit-py.sh  dev.mjs  e2e-check.mjs  e2e-full-loop.mjs  run-ai.sh  simulate-quiet-index.mjs  verify-live-quiet-index.mjs  verify-wallet-flow.mjs
supabase/: config.toml
supabase/migrations/: 0001_enable_postgis.sql  0002_roles_and_users.sql  0003_operators.sql  (+23 more)
(+142 files in other folders)
